# plugin-webuntis

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yml  entrypoint.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker.yml
app/: __init__.py  auth.py  main.py  runtime_config.py  runtime_services.py  scheduler.py  settings.py  site_manager.py  time.py
app/db/: __init__.py  models.py
app/machines/: __init__.py  plugin_machine.py
app/machines/core/: __init__.py  events.py  machine.py
app/machines/core/boot/: __init__.py  events.py  machine.py
app/machines/core/operate/: __init__.py  events.py  machine.py
app/routers/: __init__.py
app/routers/root/: __init__.py  config.py  health.py
app/statemachine/: __init__.py  depends.py  errors.py  event.py  region.py  row.py  state.py
app/untis/: __init__.py  client.py  models.py  timetable.py
templates/room-timetable/: metadata.json  sample_data.json  template.html
